# playbookgen

./: README.md  pyproject.toml
src/playbookgen/: cli.py  main.py
src/playbookgen/utils/: browser_helpers.py
